[package]
name = "rivo"
version = "0.1.0"
authors = ["Nate Nystrom <nate.nystrom@usi.ch>"]
keywords = ["script", "scripting", "language", "ivo"]
description = "A dynamically typed programming language with backward functions, implemented in Rust."
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/nystrom/rivo.git"
homepage = "https://github.com/nystrom/rivo"
# build = "build.rs"

[lib]
name = "ivo"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
ansi_term = "*"
clap = "*"
term = "*"
num = "*"
unicode_categories = "*"
lazy_static = "*"
lazycell = "*"
typed-arena = "*"
pretty = "*"
rpds = "*"
trace = { git = "https://github.com/nystrom/trace.git" }
# menhir = "*"

[dev-dependencies]
pretty_assertions = "0.3.4"

# [build-dependencies]
# menhir = "*"
