[package]
name = "rivo"
version = "0.1.0"
authors = ["Nate Nystrom <nate.nystrom@usi.ch>"]
keywords = ["script", "scripting", "language", "ivo"]
description = "A dynamically typed programming language with backward functions, implemented in Rust."
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/nystrom/rivo.git"
homepage = "https://github.com/nystrom/rivo"
# build = "build.rs"

[lib]
name = "ivo"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = "*"
term = "*"
num = "*"
unicode_categories = "*"
lazycell = "*"
pretty = "*"
rpds = "*"
failure = "*"
trace = "*"
# menhir = "*"

[patch.crates-io]
trace = { git = "https://github.com/nystrom/trace.git" }

[dev-dependencies]
pretty_assertions = "0.3.4"

# [build-dependencies]
# menhir = "*"
