[package]
name = "rivo"
version = "0.1.0"
authors = ["Nate Nystrom <nate.nystrom@usi.ch>"]
keywords = ["script", "scripting", "language", "ivo"]
description = "A dynamically typed programming language with backward functions, implemented in Rust."
license = "BSD-3"
readme = "README.md"
repository = "https://github.com/nystrom/rivo.git"
homepage = "https://github.com/nystrom/rivo"
# build = "build.rs"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = "*"
num = "*"
unicode_categories = "*"
pretty = "*"
rpds = "*"
trace = "*"
rayon = "*"

lazy_static = "*"
string-interner = "0.7.0"

gearley = "*"
cfg = "*"

[patch.crates-io]
trace = { git = "https://github.com/gsingh93/trace.git" }

[dev-dependencies]
pretty_assertions = "*"
quickcheck = "*"
quickcheck_macros = "*"

# [build-dependencies]
# menhir = "*"
